# c2sql

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  require.md
.github/workflows/: ci.yml
docs/: api-guide.md  design.md  maintenance-guide.md  ユーザーストーリー.md  改善提案.md
examples/: CMakeLists.txt  basic_crud.c  generated_crud.c  multi_row.c  transactions.c
include/: c2sql.h
specs/: persons.json  sessions.json
src/: CMakeLists.txt  c2sql.c  condition_ast.c  condition_ast.h  db_driver.h  error_ctx.c  error_ctx.h  handle_internal.h  logger.c  logger.h  migration.c  migration.h  mutex.c  mutex.h  postgres_driver.c  postgres_driver.h  query_builder.c  query_builder.h  schema_registry.c  schema_registry.h  sqlite_driver.c  sqlite_driver.h  stmt_cache.c  stmt_cache.h  txn_manager.h  type_mapping.c  type_mapping.h
tests/: CMakeLists.txt  harness.h  test_blob_field.c  test_capacity.c  test_concurrency.c  test_condition_ast.c  test_crud.c  test_driver.c  test_handle_lifecycle.c  test_header.c  test_migration.c  test_pg.c  test_query_builder.c  test_schema_register.c  test_stmt_cache.c  test_tools.py  test_transaction.c  test_type_mapping.c  test_utils.c
tools/: README.md  build_batch.sh  c2sql_gen.py  c2sql_lint.py  c2sql_spec.py  spec.schema.json
